--- a/HW2.Rmd
+++ b/HW2.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Homework 2"
-Author: "Rahul Duggal"
-Date: "18 november 2018"
 output: github_document
 ---
 
@@ -9,5 +7,319 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+*Rahul Duggal*
+
+*860118-4198*
+
+*18 november 2018*
+
 #Birdwatching
 
+##Data
+
+```{r, include=FALSE}
+#----------Read data----------------------------------------------------------------
+library(tidyverse)
+species_data <- read_csv("/Users/admin/Desktop/Statistisk Databehandling/Homework/HW_data/SpeciesObservations-2018-11-07-14-23-54.csv")
+#OBS: tidyverse own read_csv() function was used here
+
+```
+
+We take a look at the data structure:
+```{r, comment=NA}
+glimpse(species_data)
+```
+
+We need to change the format on several variables:
+
+```{r, comment=NA}
+#============DATA TIDYING======================================================
+
+#CHANGE SPACE TO UNDERSCORE-----------------------------------------------
+names(species_data) <- gsub(" ", "_", names(species_data)) 
+  #byter alla kolumn-namn med innehållande mellanslag till underlines istället
+
+#Ändra format till as.Date ----------------------------------------------
+species_data <- species_data %>%
+  mutate( Start = as.Date(Start, "%d/%m/%Y")) 
+  #Ändra format till DATE på 'Start'-kolumnen
+
+species_data <- species_data %>%
+  mutate( End = as.Date(End, "%d/%m/%Y")) 
+  #Ändra format till DATE på 'End'-kolumnen
+
+#Ändra format till BOOL -------------------------------------------------
+species_data <- species_data %>%
+  mutate( Uncertain_determination = as.logical(Uncertain_determination) )
+  #Ändra format till BOOL (logical=TRUE/FALSE) på 'Uncertain_determination'-kolumnen
+
+#Create variable Date (that simply is equal to Start) ----------------------
+species_data <- species_data %>%
+  mutate(Date=Start)
+#=============================================================================
+```
+
+We are now ready to do the tasks.
+
+##Bird watching - task 1
+**List the most recorded bird species (Organism_group == "Fåglar") in January and in July (two tables with Common_name and number observed as columns). The function knitr::kable is useful for rendering tables in Markdown.**
+
+We sort out data for january and july and then sort out the most common birds observerd during these months.
+
+```{r, comment=NA}
+#==========TASK 1=========================================================================
+# List the most recorded bird species (Organism_group == "Fåglar") in January and in July 
+# (two tables with Common_name and number observed as columns). The function knitr::kable 
+# is useful for rendering tables in Markdown.
+
+birds_jan_jul <- species_data %>% 
+  mutate(what_month=months(Date)) %>% #Translate dates to months
+  filter(Organism_group == "Fåglar", what_month == c("Januari", "Juli")) %>% #Filter out what we need
+  select(Common_name, what_month) #pick out only name and months
+
+levels(as.factor(birds_jan_jul$what_month)) #==>[1] "Januari" "Juli" #Double checking
+
+NrBirds_Jan_Jul=as.data.frame(table(birds_jan_jul)) 
+#'table' summarizes the number-of-birdname-observations in Common_name with resp. to month
+
+NrBirds_Jan <- NrBirds_Jan_Jul %>%
+  filter(what_month == "Januari") %>% #We only take out january-birds
+  arrange(desc(Freq)) %>%             #We arrange according to Freq
+  select(Common_name, Freq) %>%       #Take away column what_month
+  head(10)                            #Choose top 10 
+
+NrBirds_Jul <- NrBirds_Jan_Jul %>%
+  filter(what_month == "Juli") %>%    #We only take out july-birds
+  arrange(desc(Freq)) %>%             #We arrange according to Freq
+  select(Common_name, Freq) %>%       #Take away column what_month
+  head(10)                            #Choose top 10 
+
+
+Result=as.data.frame(c(NrBirds_Jan, NrBirds_Jul))
+colnames(Result) <- c("January Top 10 birds", "Count", "July Top 10 birds", "Count") 
+#Result
+
+knitr::kable(Result, row.names = T)
+#===================================================================================
+```
+
+##Bird watching - task 2
+
+**Introduce a variable Weekday by applying the function weekdays to Date. Visualise the weekly activity of observers by a bar graph showing the number of bird sightings each day of the week. Make sure the bars are ordered from Monday to Sunday (see textbook 15.4).**
+
+Since R use alphabetic ordering of factors we need to over-write the factorization with correct order of the weekdays. We then create a barplot of how many birds are observed accumulated on a weekday over the period Jan-Oct 2018.
+
+```{r, comment=NA}
+#=========================TASK 2====================================================
+
+#change dates to weekdays #transform it to factors
+species_data_weekdays= species_data %>%
+  mutate(what_day=as.factor(weekdays(Date))) 
+
+day_levels=c("Måndag", 
+               "Tisdag", 
+               "Onsdag", 
+               "Torsdag", 
+               "Fredag", 
+               "Lördag", 
+               "Söndag")
+
+species_data_weekdays$what_day <- factor(species_data_weekdays$what_day, levels = day_levels)
+#change levels in 'what_day'-column
+levels(species_data_weekdays$what_day) #double check
+
+#plot the counts-birds-seen on each weekday accumulated over the whole period (jan-oct)
+ggplot(species_data_weekdays, aes(x=what_day)) +
+  geom_bar() 
+
+
+```
+
+##Bird watching - task 3
+
+**The Willow warbler (lövsångare, Phylloscopus trochilus) is one of the most common migratory birds in Sweden, spending winters in sub-Saharan Africa. List the first five (unique) observers (Recorded_by) recording a Willow warbler in Stockholm, together with the date recorded.**
+
+We will first filter out dataset for Lövsångare, order the dates and then pick out the 5 first observers observed on those dates.
+
+```{r, comment=NA}
+#=====================TASK 3================================================
+
+lovsangare <- species_data %>%
+  filter(Common_name == "lövsångare") %>%
+  arrange(Date) %>%
+  select(Recorded_by, Date) %>%
+  head(5)
+
+lovsangare=as.data.frame(lovsangare)
+
+knitr::kable(lovsangare, row.names = T)
+
+```
+
+
+##Bird watching - task 4
+**Plot the monthly number of recorded lövsångare and talgoxe (Common_name %in% c("lövsångare", "talgoxe")) in the same figure.**
+
+We firstly need to order the factorization of the months correctly. Then we pick out data set for lövsångare and talgoxe so that we can plot a simultaneous barplot for both birds. 
+
+```{r, comment=NA}
+#=====================TASK 4================================================
+
+birds <- species_data %>% 
+  mutate(what_month=months(Date)) %>%
+  filter(Common_name %in% c("lövsångare", "talgoxe"))
+
+month_levels=c("Januari",    
+               "Februari", 
+               "Mars", 
+               "April", 
+               "Maj", 
+               "Juni", 
+               "Juli",
+               "Augusti",
+               "September",
+               "Oktober",
+               "November",
+               "December")
+
+birds$what_month <- factor(birds$what_month, levels = month_levels) 
+  # <--- Change levels of months so that they appear in order
+
+#DOUBLE CHECKING:
+levels(as.factor(birds$Common_name)) #double check #==> [1] "lövsångare" "talgoxe"  
+levels(as.factor(birds$what_month))  #double check #==> [1] "Januari"   "Februari" --osv-->
+
+#PLOTTING COUNT - Talgoxe vs. Lövsångare:
+ggplot(birds, aes(x=what_month, fill=Common_name)) +
+  geom_bar(position="dodge") +
+  ggtitle("Number of observed Lövsångare vs. Talgoxe") +
+  geom_density(aes(x=what_month, y=Common_name))
+
+```
+
+We can easily see that Lövsångare are gone during winther season. 
+
+
+#Apartment prices
+
+##Data
+
+We first take a look at the data: 
+```{r, include=F}
+booli <- read_csv("/Users/admin/Desktop/Statistisk Databehandling/Homework/HW_data/Booli_sold.csv")
+```
+
+```{r, comment=NA}
+glimpse(booli)
+```
+
+We will change format, if necessary or needed, during the tasks.
+
+##Apartment prices - task 1
+**Illustrate how Soldprice depends on Livingarea with a suitable figure.**
+
+We illustrate this with points and a smooth curve.
+
+```{r, comment=NA}
+# =================(1)=====================
+ggplot(booli) + geom_point(aes(x=livingArea, y=soldPrice)) + geom_smooth(aes(x=livingArea, y=soldPrice)) 
+#We observe two extreme values that are >  8750000 threshold
+
+#Pick out row number of extreme values:
+extremerow=which(booli$soldPrice > 8750000) #row nr = [6 60]
+
+booli$soldPrice[extremerow] #==> [1] 8950000 9250000
+```
+
+We can see in the plot that there are 2 observations that are very high in sold price, above 8750000 SEK. We find out that the that those sold prices are 8,950,000 and 9,250,000 SEK. Pretty expensive for less that $140 m^2$ living area.
+
+##Apartment prices - task 2
+**Illustrate trends in Soldprice / Livingarea over the period.**
+
+We illustrate the trends with a scatter plot, smooth line and a regression fitted line.
+
+```{r, comment=NA}
+# =================(2)=====================
+
+#CREATE sq/price-column
+booli = booli %>%
+  mutate(pricePersquare=round(soldPrice/as.integer(livingArea)))
+
+#double check 6 first elements
+head(booli$pricePersquare) 
+
+#---------regression-line-------------
+regression=lm(booli$pricePersquare ~ as.Date(booli$soldDate))
+int=regression$coefficients[1]
+slo=regression$coefficients[2]
+#-------------------------------------  
+
+#plot sq/price with 2 types of fitting line:
+ggplot(booli) + geom_point(aes(x=soldDate, y=pricePersquare)) +geom_smooth(aes(x=soldDate, y=pricePersquare)) +
+    geom_abline(intercept = int, slope = slo, col="red")
+
+
+```
+
+##Apartment prices - task 3
+**Illustrate an aspect of data using a table.**
+
+```{r, comment=NA}
+# =================(3)=====================
+
+#Separate adress and adress number 
+booli2=separate(booli, location.address.streetAddress, c("Adress", "Nr"))
+
+#Make adress into factors
+booli2$Adress <- as.factor(booli2$Adress)
+  #booli2$Adress #==> 4 Levels: Docentbacken Ekhagsvägen Torphagsvägen Åminnevägen
+
+#Make constructionYear into factors
+booli2$constructionYear = as.factor(booli2$constructionYear)
+  #booli2$constructionYear #==> Levels: 1931 1934 1935 1936 1937 1939 1968 1969
+
+#Create table of how  many appartments where built under each year for each adress.
+adress_year=table(booli2$Adress,booli2$constructionYear)
+adress_year=as.data.frame(adress_year)
+adress_year=spread(adress_year, Var2,Freq)
+
+knitr::kable(adress_year, row.names = T)
+```
+
+##Apartment prices - task 4
+**Illustrate an aspect of data using a histogram.**
+
+We illustrate frequencies of the sizes of the liviing areas.
+
+```{r, comment=NA}
+# =================(4)=====================
+#Histogram over living area
+ggplot(booli,aes(x=livingArea)) + 
+  geom_histogram(binwidth = 10)
+
+```
+
+Seems that there are mostly of $40m^2-70m^2$ apartments. 
+
+##Apartment prices - task 5
+**Illustrate an aspect of data using a boxplot (geom_boxplot).**
+
+We illustrate boxplots for two different real estate agencies - Notar and Svensk Fastighetsförmedling. 
+
+```{r, comment=NA}
+# =================(5)=====================
+
+realestate=table(as.factor(booli$source.name))
+realestate=as.data.frame(realestate)
+colnames(realestate)=c("Agency", "Count")
+
+Notar <- booli2 %>%
+  filter(source.name == c("Notar", "Svensk Fastighetsförmedling"  ))
+
+ggplot(Notar, aes(x = source.name, y = soldPrice)) + geom_boxplot() 
+
+```
+
+Svensk Fastighetsförmedling tends to sell for higher prices. However, according to the data, Notar is selling more quantities of apartments so we can not draw any conclusions just based on this. 
+
+#THE END
